Initial metrics-collector-ui commit

--- a/metrics-collector-ui/grails-app/conf/application.yml
+++ b/metrics-collector-ui/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web
     codegen:
-        defaultPackage: metrics.collector.ui
+        defaultPackage: com.nikodc.metricscollector
 info:
     app:
         name: '@info.app.name@'
