--- a/metrics-collector-ui/build.gradle
+++ b/metrics-collector-ui/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
 
     console "org.grails:grails-console"
+
+    compile "commons-codec:commons:codec:1.9"
+    compile "org.apache.httpcomponents:httpclient:4.3.3"
 }
 
 task wrapper(type: Wrapper) {
