--- a/metrics-collector-ui/build.gradle
+++ b/metrics-collector-ui/build.gradle
@@ -73,7 +73,12 @@ dependencies {
 
     console "org.grails:grails-console"
 
-    compile "commons-codec:commons:codec:1.9"
+    // metrics-collector's specific dependencies and plugins
+
+    // Plugins
+    compile "org.grails.plugins:quartz:2.0.0.M4"
+
+    // Dependencis
     compile "org.apache.httpcomponents:httpclient:4.3.3"
 }
 
