--- a/metrics-collector-ui/grails-app/conf/application.yml
+++ b/metrics-collector-ui/grails-app/conf/application.yml
@@ -84,6 +84,10 @@ dataSource:
     username: sa
     password:
 
+metricscollector:
+    engine:
+        trigger: 30000
+
 environments:
     development:
         dataSource:
